2008-04-20  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-interp.c (_syx_interp_switch_process): only switch if it's a different process

	* syx/syx-interp.h (struct SyxInterpState): added process
        All calls have been updated to use this new member.

        All tests now works just like the trunk. Have to do more work on the scheduler, though.
        
        * syx/syx-interp.h (struct SyxInterpState): removed process_frame

        * syx/syx-object.c (syx_process_new): initialize bottome frame

        * syx/syx-primitives.c: updated to match new interpreter internal API
        
        * syx/syx-interp.c (_syx_interp_switch_process): fix fetching the frame
        Refactor most of the functions to request state/process arguments to work concurrency
        on different processes and execution states.
        Claned up everything, yet another slightly speedup.
        All calls have been updated.

2008-04-18  Luca Bruno  <lethalman88@gmail.com>

        * syx/syx-parser.c (_syx_parser_find_temporary_name): fixes issue #29

        * tests/testinterp.c (main): test block recursion (see issue #29)

        * syx/syx-interp.c (_syx_interp_switch_process): do not save the process state

        * syx/syx-parser.c (_syx_parser_parse_optimized_block): fix memory leak

        * syx/syx-interp.c (syx_interp_enter_context): save process state
        (_syx_interp_switch_process): always switch process

        * syx/syx-init.c (syx_initialize_system): 

2008-04-16  Luca Bruno  <lethalman88@gmail.com>

        * syx/syx-primitives.c (BlockClosure_valueWithArguments): forgot part of the implementation
        (Compiler_parse): fix memory leak

        * syx/syx-interp.c (_syx_interp_frame_to_context): again do not copy because we have to reference the frame, not important if the context will die for now

        * syx/syx-object.c (syx_process_new): reset frame pointer

        * syx/syx-interp.c (_syx_interp_switch_process): really switch process
